--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
     </div>
   </div>
 </nav>
-<div class="col-8">
+
+<div class="container-fluid">
     <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-        <div id="list-item-1" class="card" style="width: 18rem;">
+        <div class="card-group">
+        <div id="list-item-1" class="card">
             <img src="./img/松發.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">松發肉骨茶</h5>
@@ -50,7 +52,7 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div id="list-item-2" class="card" style="width: 18rem;">
+          <div id="list-item-2" class="card">
             <img src="./img/亞華.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">亞華肉骨</h5>
@@ -58,7 +60,7 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div id="list-item-3" class="card" style="width: 18rem;">
+          <div id="list-item-3" class="card">
             <img src="./img/發起人.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">發起人肉骨</h5>
@@ -66,7 +68,7 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div id="list-item-4" class="card" style="width: 18rem;">
+          <div id="list-item-4" class="card">
             <img src="./img/黃亞細.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">黃亞細肉骨</h5>
@@ -74,8 +76,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
+          </div>
     </div>
   </div>
+
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
