--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body class="position-relative" >
-    <button type="button" class="btn btn-light position-fixed bottom-0 end-0 z-1 opacity-75">回到TOP</button>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <button type="button" class="btn btn-light position-fixed bottom-0 end-0 z-1 opacity-75"><a href="#top">回到TOP</a></button>
+    <nav id="top" class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand fs-2 fw-bold" href="#">新加坡Tavel</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
