--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body class="position-relative" >
-    <button type="button" class="btn btn-light position-fixed bottom-0 end-0 z-1 opacity-75"><a href="#top">回到TOP</a></button>
+    <button type="button" class="btn btn-dark position-fixed bottom-0 end-0 z-1 opacity-75 p-3 rounded-circle"><a href="#top">TOP</a></button>
     <nav id="top" class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand fs-2 fw-bold" href="#">新加坡Tavel</a>
