--- a/index.html
+++ b/index.html
@@ -860,6 +860,32 @@
                                 </div>
     </div>
   </div>
+  <footer class=" text-center text-lg-start">
+    <div class=" container-fluid p-4">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0 ">
+          <h5 class="text-uppercase">1888精選酒店 (Hotel 1888 Collections)</h5>
+          <p>地址: 新加坡,20 Trengganu Street, 3rd Storey
+            <br/>
+            Hotel 1888 Collection住宿距離唐人街地鐵站有5 分鐘步行約。其現代化的客房提供免費 WiFi,大型投影儀屏幕和保險箱。
+            Hotel 1888 Collection住宿鄰近神廟和史密斯街,沿著Trengganu街,距離克拉碼頭的夜生活場所只有5 分鐘車程。烏節路購物帶的火車車程距離住宿有10 分鐘的路程。
+            Hotel 1888 Collection飯店的現代化客房配有室內沏茶/咖啡沖泡用具。私人衛浴內配有盥洗用品和熱水淋浴設施。
+            飯店的公共區域設有咖啡機。
+           </p>
+        </div>
+        
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5 class="text-uppercase mb-0">Connect With Us</h5>
+          
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8579.175183868349!2d103.84478324647887!3d1.285041051311691!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19733aa3aa1d%3A0xf5d0025fe34976!2sHotel%201888%20Collection!5e0!3m2!1szh-TW!2stw!4v1681099252809!5m2!1szh-TW!2stw" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 My Website
+    </div>
+  </footer>
+  
   <script async  defer
     src="https://maps.googleapis.com/maps/api/js?v=beta&key=AIzaSyAN0es25saOwuZwSEZMFJcpMDaIY0Rdc5Q&callback=initMap">
   </script>
