fix:toggle mode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     
 </head>
@@ -13,10 +14,13 @@
     <button type="button" class="btn btn-dark position-fixed bottom-0 end-0 z-1 opacity-75 p-3 rounded-circle"><a href="#top">TOP</a></button>
     <nav id="top" class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid">
+    <div class="light-dark__toggle">
+    <i id="light-dark" class="ri-sun-fill"></i>
     <div class="toggle-mode">
       <button class="toggle-mode__button"></button>
     </div>
-    <a class="navbar-brand fs-2 fw-bold " href="self">浪子回頭新加坡Tavel</a>
+    </div>
+    <a class="navbar-brand fs-2 fw-bold " href="#"><img src="/img/大哥.jpg" style="width:50px;height:50px ;" alt="..."> 回頭新加坡Travel</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
