--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/css/main.css">
+    <link rel="stylesheet" href="/public/css/main.css">
     <script src="https://kit.fontawesome.com/74e6a27e77.js" crossorigin="anonymous"></script>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-smooth-scroll="true"  class="position-relative " data-bs-theme="light"  >
@@ -993,7 +993,7 @@
   <script async  defer
     src="https://maps.googleapis.com/maps/api/js?v=beta&key=AIzaSyAN0es25saOwuZwSEZMFJcpMDaIY0Rdc5Q&callback=initMap">
   </script>
-  <script  src="/dist/js/bundle.js"></script>
+  <script  src="/public/app.js"></script>
  
 </body>
 </html>
